Fix minor bug. Change mail to donate@alignlab.com

--- a/assets/css/embed-page.css
+++ b/assets/css/embed-page.css
@@ -20,3 +20,7 @@ body{
     width: 500px;
     margin: auto;
 }
+hr{
+    color: #999;
+    border-top: 1px solid #999;
+}
